# recipes_app

./: README.md  setup.cfg
api/: pyproject.toml
api/api/: settings.py
api/core/: models.py  serializers.py  urls.py
api/core/migrations/: 0001_initial.py
client/: nuxt.config.js  package-lock.json  package.json
client/components/: RecipeCard.vue
client/pages/: index.vue
client/pages/recipes/: add.vue  index.vue
client/pages/recipes/_id/: edit.vue  index.vue
