[build-system]
requires = ["setuptools", "wheel", "poetry^1.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "recipes_api"
version = "0.1.0"
description = ""
authors = ["kashew_nuts <kashun.nuts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^2.2"
djangorestframework = "^3.12.2"
django-cors-headers = "^3.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"

[tool.black]
line-length = 99
exclude = '''
    .git
    | .github
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | migrations
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 99
skip = '''
    .git
    .github
    .mypy_cache
    .pytest_cache
    .tox
    .venv
    migrations
'''

